--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                     <h1>COOl Dude Headphone</h1>
                                     <p>This the best headphone in the world who just wast time in this funky world</p>
                                     <h1>$600</h1>
-                                    <div class="btn btn-color">Buy Now</div>
+                                    <button class="btn-color hide-button">Buy Now</button>
                                 </div>
                             </div>
                         </div>
@@ -76,7 +76,7 @@
                                     <h1>TV</h1>
                                     <p>This the best headphone in the world who just wast time in this funky world</p>
                                     <h1>$600</h1>
-                                    <div class="btn btn-color">Buy Now</div>
+                                    <button class="btn-color hide-button">Buy Now</button>
                                 </div>
                             </div>
                         </div>
@@ -92,7 +92,7 @@
                                     <h1>X-Box</h1>
                                     <p>This the best headphone in the world who just wast time in this funky world</p>
                                     <h1>$600</h1>
-                                    <div class="btn btn-color">Buy Now</div>
+                                    <button class="btn-color hide-button">Buy Now</button>
                                 </div>
                             </div>
                         </div>
@@ -154,7 +154,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-color">Buy Now</div>
+                            <button class="btn-color hide-button">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-color">Buy Now</div>
+                            <button onclick="log()" class="btn-color hide-button">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-color">Buy Now</div>
+                            <button class="btn-color hide-button">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -197,7 +197,8 @@
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
                     <div class="card h-100 border border-0 shadow-lg ">
-                        <img src="/images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div></div>
+                        <img src="/images/bags/bag-1.png" class="card-img-top" id="red" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Red Laltu Bag</h5>
                             <h1>$160</h1>
@@ -205,7 +206,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-color">Buy Now</div>
+                            <button class="btn-color hide-button">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -219,7 +220,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-color">Buy Now</div>
+                            <button class="btn-color hide-button">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -234,7 +235,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-color">Buy Now</div>
+                            <button class="btn-color hide-button">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -243,7 +244,7 @@
         <!-- Backpack Selection END -->
 
         <!-- Subscribe Selection Start -->
-        <div style="height:250px;"
+        <section style="height:250px;"
             class="container my-5 panda-background-color d-flex justify-content-center align-items-center rounded-3"
             id="subscribe">
             <div>
@@ -251,12 +252,12 @@
                 <p>Get updates on sales, specials and more</p>
                 <form>
                     <div class="mb-2">
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <input type="" class="form-control" id="input-email" aria-describedby="emailHelp">
                     </div>
-                    <button type="submit" class="btn btn-color">Submit</button>
+                    <button type="submit" class="btn btn-color" id="submit-button" disabled>Submit</button>
                 </form>
             </div>
-        </div>
+        </section>
         <!-- Subscribe Selection END -->
     </main>
 
@@ -266,6 +267,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
